[gd_scene load_steps=11 format=2]

[ext_resource path="res://Ice Zombie.gd" type="Script" id=1]
[ext_resource path="res://images/NPC/IceZombieNPC/skelet_idle_anim_f0.png" type="Texture" id=2]
[ext_resource path="res://images/NPC/IceZombieNPC/skelet_idle_anim_f1.png" type="Texture" id=3]
[ext_resource path="res://images/NPC/IceZombieNPC/skelet_idle_anim_f2.png" type="Texture" id=4]
[ext_resource path="res://images/NPC/IceZombieNPC/skelet_idle_anim_f3.png" type="Texture" id=5]
[ext_resource path="res://images/exclamation_sign.png" type="Texture" id=6]
[ext_resource path="res://sound/Ice Zombie sounds/sound 1.wav" type="AudioStream" id=7]
[ext_resource path="res://sound/Ice Zombie sounds/sound 2.wav" type="AudioStream" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 6.88678
height = 1.47369

[node name="Ice Zombie" type="Area2D"]
position = Vector2( 688.222, 420.946 )
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.399475, -0.295296 )
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 1 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="audio1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="audio2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="Oneliner" type="Sprite" parent="."]
position = Vector2( -0.671265, -44.8422 )
scale = Vector2( 1.69308, 1.91999 )
texture = ExtResource( 6 )
[connection signal="body_entered" from="." to="." method="_on_Ice_Zombie_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Ice_Zombie_body_exited"]
